# wldm

./: .gitignore  INSTALL.md  MANIFEST.in  Makefile  README.md  check-deps.sh  check.sh  requirements-dev.txt  setup.cfg  systemd-wldm.sh  wldm.sh
.github/workflows/: python-tests.yml
Documentation/: architecture.md  configuration.md  dbus.md  greeter-fallback-idea.md  greeter-stub-daemon.md  pam-worker-protocol.md  protocol.md
config/: wldm-devel.ini  wldm.ini  wldm.ini.in
data/resources/: greeter.ui  style.css
data/scripts/: wayland-session  wldm.in
data/systemd/: wldm.service.in
resources/: greeter.ui  style.css
src/wldm/: __init__.py  __main__.py  _gtk_ffi.py  _libc.py  _pam_ffi.py  audit.py  command.py  config.py  daemon.py  daemon_auth.py  dbus_adapter.py  greeter.py  greeter_account.py  greeter_auth.py  greeter_client.py  greeter_keyboard.py  greeter_protocol.py  greeter_session.py  greeter_ui.py  inifile.py  ipc_client.py  pam.py  (+14 more)
systemd/: wldm.service
tests/: conftest.py  greeter_stub_daemon.py  helpers_daemon.py  helpers_greeter.py  test_audit.py  test_command.py  test_config.py  test_curses_greeter.py  test_daemon.py  test_daemon_auth.py  test_dbus_adapter.py  test_greeter.py  test_greeter_launcher.py  test_greeter_session.py  test_greeter_stub_daemon.py  test_gtk_ffi.py  test_inifile.py  test_init_module.py  test_ipc_client.py  test_lazy_imports.py  test_logindefs.py  test_main_module.py  test_pam.py  test_pam_worker.py  test_pam_worker_protocol.py  test_protocol.py  test_secret.py  test_session.py  test_state.py  test_tty.py  test_wtmp.py
(+28 files in other folders)
