[metadata]
name = wldm
version = attr: wldm.__VERSION__
description = Wayland login display manager
license = GPL-2.0-or-later

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    PyGObject
include_package_data = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wldm = wldm.command:cmd
